--- a/_config.yml
+++ b/_config.yml
@@ -6,53 +6,37 @@ description: "Lets build it together"
 baseurl:     ""
 url:         "http://designyoursociety.com"
 date_format: "%b %-d, %Y"
+# Owner/author information
+owner:
+name:           Design Your Society
+avatar:         dys.jpg
+email:          designyoursociety@gmail.com
+twitter_username:
+github_username:
+github_username:
+# Layout settings
+header_type: default  # values [ drawer, default ]
+post_type: highlight    # values [ highlight, default ]
+pagination_type: default  # values [ ops, default ]
 
-# Google services
-google_analytics:
-google_verification:
+more_vert:
+  option1:
+    name: Cool Option 1
+    link: www.myawesomelink.com
+  option2:
+    name: Cool Option 2
+    link: www.myawesomelink.com
+  option3:
+    name: Cool Option 3
+    link: www.myawesomelink.com
+
+# Build settings
+markdown: kramdown
 
 # Optional features
 animated:           true
 show_related_posts: false
-show_post_footers:  true
-show_social_icons:  true
 
 # Disqus post comments
 # (leave blank to disable Disqus)
 disqus_shortname: designyoursociety
-
-# Social icons
-github_username:
-bitbucket_username:
-stackoverflow_id:
-twitter_username:
-google_plus_id:
-linkedin_username:
-angellist_username:
-medium_id:
-bitcoin_url:
-paypal_url:
-flattr_button:
-
-# Post sharing icons
-show_sharing_icons: true
-share_text: 'Share this post!'
-# Change to 'true' to enable individual icons
-share_facebook: true
-share_twitter: true
-share_googleplus: true
-share_linkedin: true
-share_digg: true
-share_tumblr: false
-share_reddit: false
-share_stumbleupon: false
-share_hackernews: false
-
-# Build settings
-markdown:     kramdown
-redcarpet:
-  extensions: ['smart', 'tables', 'with_toc_data']
-permalink:    pretty
-paginate:     4
-sass:
-  compressed: true
